--- a/index.html
+++ b/index.html
@@ -10,9 +10,25 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic|Varela+Round' rel='stylesheet' type='text/css'>
 </head>
 <body>
+ <!-- Hero -->
+ <header>
+   <nav class="container">
+     <div class="one-half">
+       <a href="index.html" class="site-logo"><img src="images/site-logo.png" alt="Blocbox" /></a>
+     </div>
+     <div class="one-half">
+       <ul>
+         <li><a href="signin.html">Sign In</a></li>
+         <li class="btn-outline"><a href="signup.html">Sign Up</a></li>
+       </ul>
+     </div>
+   </nav>
+   <div class="container hero">
+     <h1>Save, share and collaborate.</h1>
+     <p>blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
+     <a href="signup.html" class="btn">Start Your Free Trial!</a>
+     <img src="images/dashboard.png" alt="Blocbox" />
+   </div>
+ </header>
 </body>
 </html>
- </head>
- <body>
- </body>
- </html>
