--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <link rel="stylesheet" href="css/normalize.css">
  <link rel="stylesheet" href="css/style.css">
  <link rel="stylesheet" href="css/font-awesome.css">
- <link rel="stylesheet" href="css/animate.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
  <!-- Hero -->
@@ -29,7 +29,7 @@
      </div>
    </nav>
    <div class="container hero">
-     <h1>Save, share and collaborate.</h1>
+     <h1 class="animated infinite bounce">Save, share and collaborate.</h1>
      <p>blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
      <a href="signup.html" class="btn">Start Your Free Trial!</a>
      <img src="images/dashboard.png" alt="Blocbox" />
