--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      </div>
    </nav>
    <div class="container hero">
-     <h1 class="animated infinite bounce">Save, share and collaborate.</h1>
+     <h1 class="animated fadeIn">Save, share and collaborate.</h1>
      <p>blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
      <a href="signup.html" class="btn">Start Your Free Trial!</a>
      <img src="images/dashboard.png" alt="Blocbox" />
@@ -41,15 +41,18 @@
    <section class="benefits">
      <ul class="container">
        <li class="one-third">
-         <h2>Create notes</h2>
+        <i class="fa fa-file-o"></i>
+         <h2 class="animated fadeIn">Create notes</h2>
          <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
        </li>
        <li class="one-third">
-         <h2>Save images</h2>
+        <i class="fa fa-picture-o"></i>
+         <h2 class="animated fadeIn">Save images</h2>
          <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
        </li>
        <li class="one-third">
-         <h2>Add links</h2>
+        <i class="fa fa-link"></i>
+         <h2 class="animated fadeIn">Add links</h2>
          <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
        </li>
      </ul>
@@ -100,6 +103,9 @@
       </div>
     </li>
    </ul>
+    <div class="container">
+   <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
+ </div>
  </section>
  <!-- Testimonials -->
  <section class="testimonials">
